fixed scroll bar issue, spacing on footer

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,11 @@ html {
 }
 
 body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    /* font-family: 'Times New Roman', Times, serif; */
+    /* font-family: 'Roboto Slab'; */
+    /* font-family: Georgia, 'Times New Roman', Times, serif; */
+    /* font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,6 +44,7 @@ body {
     width: 100%;
     /* height: auto; */
     min-height: 95vh;
+    /* height: 95vh; */
     margin: 0 auto;
     padding: 0;
     max-width: var(--max-width);
@@ -111,13 +117,14 @@ img.top {
 article {
     display: flex;
     flex-direction: column;
+    align-items: center;
     padding-top: 2em;
     padding-bottom: 1em;
     width: 100%;
     height: auto;
 }
 
-article > p {
+p {
 
     max-width: 70ch;
     margin: auto;
@@ -126,6 +133,20 @@ article > p {
     padding-left: 2.5em;
     padding-right: 2.5em;   
 }
+
+.footerText {
+    padding: 0;
+}
+
+.headers {
+    max-width: 70ch;
+    margin: auto;
+    height: auto;
+    /* padding-bottom: 1em; 
+    padding-left: 2.5em;
+    padding-right: 2.5em;   */
+}
+
 
 footer {
     background: var(--main-bg-color);
@@ -137,8 +158,9 @@ footer {
     justify-content: center;
     align-content: center;
     /* border-top: 1px solid black; */
-    font-size: 75%;
-    min-height: 5vh;
+    font-size: 1.5vh;
+    /* min-height: 5vh; */
+    height: 5vh;
     
 }
 
@@ -223,4 +245,11 @@ a.email {
 .tabs:hover {
     background-color: var(--alt-bg-color);
     color: var(--alt-bg-color2);
+}
+
+.cv {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 50%;
 }
